# mobile-robotics

./: .gitignore
src/mfrankic_1/: package.xml  setup.cfg  setup.py
src/mfrankic_1/launch/: turtlebot3_gazebo_subscriber.launch.py
src/mfrankic_2/: package.xml  setup.cfg  setup.py
src/mfrankic_2/launch/: turtlebot3_gazebo_go_to_goal.launch.py
src/mfrankic_3/: package.xml  setup.cfg  setup.py
src/mfrankic_3/mfrankic_3/: scanner_node.py
src/mfrankic_4/: package.xml  setup.cfg  setup.py
src/mfrankic_4/mfrankic_4/: odom_subscriber.py
src/mfrankic_5/: package.xml  setup.cfg  setup.py
src/mfrankic_5/mfrankic_5/: bb9_follower.py
src/mfrankic_6/: package.xml  setup.cfg  setup.py
src/mfrankic_6/launch/: turtlebot3_gazebo_go_to_goal.launch.py
src/mfrankic_6/mfrankic_6/: go_to_goal.py
src/mfrankic_6/rviz/: config.rviz  model.rviz
src/mfrankic_7/: package.xml  setup.cfg  setup.py
src/mfrankic_7/launch/: turtlebot3_house.launch.py
src/mfrankic_7/rviz/: config.rviz
src/move_pillar/: package.xml  setup.cfg  setup.py
src/move_pillar/launch/: move_pillar.launch.py
src/opencv_examples/: package.xml  setup.cfg  setup.py
src/opencv_examples/opencv_examples/: camera_player.py  color_thresholding.py  edge_detection.py  face_detection.py  feature_matching.py  object_recognition.py  people_detection.py  video_player.py
src/trackme/: package.xml  setup.cfg  setup.py
src/v01_p01/: package.xml  setup.cfg  setup.py
src/v02_p01/: package.xml  setup.cfg  setup.py
src/v05_p01/: package.xml  setup.cfg  setup.py
src/v08/: package.xml
(+24 files in other folders)
