<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opencv_examples</name>
  <version>1.0.0</version>
  <description>Package containing multiple ROS2 OpenCV examples.</description>
  <maintainer email="dsusanj@riteh.hr">Diego Susanj</maintainer>
  <license>GNU GPLv3</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>rcl_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
